bk_ida/gccida/g1/store_parm_decls
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6940:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6943:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6946:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6949:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6950:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6952:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6954:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6958:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6960:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6961:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:6963:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7105:20: error: expected expression
v20 = ( tree_node *)*( &global_trees + 25); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7105:9: error: use of undeclared identifier 'tree_node'
v20 = ( tree_node *)*( &global_trees + 25); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7182:22: error: expected expression
v29 = *( tree_node **)( rtl[4] + 128LL); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7182:10: error: use of undeclared identifier 'tree_node'
v29 = *( tree_node **)( rtl[4] + 128LL); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7183:26: error: expected expression
if ( v29 == ( tree_node *)*( &global_trees + 27) ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7183:15: error: use of undeclared identifier 'tree_node'
if ( v29 == ( tree_node *)*( &global_trees + 27) ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/c-decl.c:7188:22: error: expected expression
v31 = *( tree_node **)( v30 + 128); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_parm_decls/src/obj/c-decl.o] Error 1
